--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,21 @@
 
 </ul>
 
--->
 
 <app-child [item]="data">
 
 </app-child>
 
 <button (click)="updateChild()">Update Child</button>
+-->
+
+<ul *ngFor="let user of userDetails">
+    <app-user-details [item]="user">
+
+    </app-user-details>
+</ul>
+
+
 
 
 
