--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,13 +22,16 @@
 </app-child>
 
 <button (click)="updateChild()">Update Child</button>
--->
 
 <ul *ngFor="let user of userDetails">
     <app-user-details [item]="user">
-
+        
     </app-user-details>
 </ul>
+-->
+{{data1}}
+
+<app-child1 (updateDataEvent)="updateData($event)" ></app-child1>
 
 
 
