--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,6 @@
 
 <input type="text" name="text" id="name" [(ngModel)]="name1">
 <h1>{{name1}}</h1>
--->
 
 <p>{{title | uppercase}}</p>
 
@@ -44,6 +43,18 @@
 
 
 <p>{{20 | usdToInr : 75}}</p>
+-->
+
+<p>Tempalte Driven form</p>
+
+<form #loginForm="ngForm" (ngSubmit)="userLogin(loginForm.value)">
+    <input type="text" ngModel name="name" placeholder="Enter Name">
+    <br>
+    <br>
+    <input type="password" ngModel name="password" placeholder="Enter Password">
+    <br><br>
+    <button>Login</button>
+</form>
 
 
 
